Parse upcoming, lookup text, print to console

--- a/upcoming.yml
+++ b/upcoming.yml
@@ -1,15 +1,13 @@
----
-upcoming:
-  - December 13
-    passage: Luke 17:1-10
-    title: You Must Forgive Him
-  - December 20
-    passage: Luke 17:11-18:8
-    title: Whoever Seeks to Preserve His Life Will Lose It
-  - December 27
-    passage: 2 Corinthians 12:1-10
-    title: Strength in Weakness
-  - January 3
-    passage: Luke 18:9-30
-    title: The One Who Humbles Himself Will Be Exalted
-...
+--- #Upcoming sermons
+- date: December 13
+  passage: Luke 17:1-10
+  title: You Must Forgive Him
+- date: December 20
+  passage: Luke 17:11-18:8
+  title: Whoever Seeks to Preserve His Life Will Lose It
+- date: December 27
+  passage: 2 Corinthians 12:1-10
+  title: Strength in Weakness
+- date: January 3
+  passage: Luke 18:9-30
+  title: The One Who Humbles Himself Will Be Exalted
