Add year to dates

--- a/upcoming.yml
+++ b/upcoming.yml
@@ -1,13 +1,13 @@
 --- #Upcoming sermons
-- date: December 13
+- date: December 13 2015
   passage: Luke 17:1-10
   title: You Must Forgive Him
-- date: December 20
+- date: December 20 2015
   passage: Luke 17:11-18:8
   title: Whoever Seeks to Preserve His Life Will Lose It
-- date: December 27
+- date: December 27 2015
   passage: 2 Corinthians 12:1-10
   title: Strength in Weakness
-- date: January 3
+- date: January 3 2016
   passage: Luke 18:9-30
   title: The One Who Humbles Himself Will Be Exalted
