Add sermons from Jan to April

--- a/upcoming.yml
+++ b/upcoming.yml
@@ -1,13 +1,54 @@
 --- #Upcoming sermons
-- date: December 13 2015
-  passage: Luke 17:1-10
-  title: You Must Forgive Him
-- date: December 20 2015
-  passage: Luke 17:11-18:8
-  title: Whoever Seeks to Preserve His Life Will Lose It
-- date: December 27 2015
-  passage: 2 Corinthians 12:1-10
-  title: Strength in Weakness
-- date: January 3 2016
+- date: January 3
   passage: Luke 18:9-30
   title: The One Who Humbles Himself Will Be Exalted
+- date: January 10
+  passage: Psalm 84
+  title: Blessing
+- date: January 17
+  passage: Luke 18:31-19:44
+  title: The Son of Man Came to Seek and to Save the Lost
+- date: January 24
+  passage: Joshua 1:1-9
+  title: Trusting God through Transition
+- date: January 31
+  passage: Luke 19:45-21:4
+  title: Render to Caesar the Things That Are Caesar's, and to God the Things that Are God's
+- date: February 7
+  passage: Psalm 85
+  title: Revival
+- date: February 14
+  passage: Luke 21:5-38
+  title: Heaven and Earth Will Pass Away but My Words Will Not Pass Away
+- date: February 21
+  passage: Luke 22:1-13
+  title: The Chief Priests and the Scribes Were Seeking How to Put Him to Death
+- date: February 28
+  passage: Psalm 100
+  title: Praise
+- date: March 6
+  passage: Ecclesiastes 12:13-14
+  title: "Don't Judge Me!"
+- date: March 13
+  passage: Luke 22:14-38
+  title: This is My Body Which Is Given for You
+- date: March 20
+  passage: Luke 22:39-23:56
+  title: He Breathed His Last
+- date: March 27
+  passage: Luke 24
+  title: He Is Not Here, but Has Risen
+- date: April 3
+  passage: Numbers 15-30
+  title: The Death of a Generation
+- date: April 10
+  passage: 2 Corinthians 1:3-11
+  title: God's Comfort for Suffering Saints
+- date: April 17
+  passage: Isaiah 25:6-12
+  title: When Death Is Done
+- date: April 24
+  passage: Numbers 31-36
+  title: Provision for the Future
+
+
