Add sermons from the latest card

--- a/upcoming.yml
+++ b/upcoming.yml
@@ -50,5 +50,61 @@
 - date: April 24
   passage: Numbers 31-36
   title: Provision for the Future
-
+- date: May 1
+  passage: 1 Corinthians 1:1
+  title: The Messenger
+- date: May 8
+  passage: 1 Corinthians 1:2-3
+  title: The Sender and the Audience
+- date: May 15
+  passage: 1 Corinthians 1:4-6
+  title: The Reception
+- date: May 22
+  passage: 1 Corinthians 1:7-9
+  title: The Provider
+- date: May 29
+  passage: Psalm 147
+  title: Broken, but not Forgotten
+- date: June 5
+  passage: Ezekiel 1-3
+  title: Vision and Calling
+- date: June 12
+  passage: Hosea 1:1-3:5
+  title: God's Sure and Unshakeable Love
+- date: June 19
+  passage: Hosea 4:1-6:6
+  title: Our Light and Promiscuous Love
+- date: June 26
+  passage: Ezekiel 4-11
+  title: Destruction and Departure
+- date: July 3
+  passage: Esther 1-7
+  title: God's Enemies
+- date: July 10
+  passage: Esther 8-10
+  title: God's People
+- date: July 17
+  passage: Ezekiel 12-24
+  title: Faithlessness and Faithfulness
+- date: July 24
+  passage: Ezekiel 25-32
+  title: Judgment and Promise
+- date: July 31
+  passage: Ezekiel 33-48
+  title: Valley and Temple
+- date: August 7
+  passage: 2 John 1-3
+  title: Truth that Abides
+- date: August 14
+  passage: Psalm 38
+  title: Crushed, but not Forsaken
+- date: August 21
+  passage: 2 John 4-11
+  title: Love that Obeys
+- date: August 28
+  passage: 2 John 12-13
+  title: Joy that is Completed
+- date: September 4
+  passage: Psalm 32
+  title: Sinful, but Forgiven
 
