Rewrite emailer in node for AWS Lambda / SES

--- a/config/upcoming.yml
+++ b/config/upcoming.yml
@@ -1,4 +1,4 @@
---- #Upcoming sermons
+--- # Upcoming sermons
 - date: January 3
   passage: Luke 18:9-30
   title: The One Who Humbles Himself Will Be Exalted
@@ -107,4 +107,13 @@
 - date: September 4
   passage: Psalm 32
   title: Sinful, but Forgiven
+- date: September 11
+  passage: 1 Peter 1:6-7
+  title: Rejoicing in Salvation
+- date: September 18
+  passage: Psalm 33
+  title: The Lord's Love
+- date: September 25
+  passage: Luke 5:1-11
+  title: Fishers of Men
 
