Fix timezone problems
 Now timezone is specified in config.yml, and it doesn't matter what
 timezone the program is running in. This assumes the dates specified in
 upcoming.yml match the timezone in config.yml.

 * Converted config.yml to camelCase
 * Fix test script per new file structure

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,5 +1,6 @@
 --- #General config
-from_name: Upcoming Sermon
-from_email: sermons@domain.com
-esv_key: IP
+fromName: Upcoming Sermon
+fromEmail: sermons@domain.com
+esvKey: IP
+timeZone: America/New_York
 
