--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "co": "^4.6.0",
     "co-request": "^1.0.0",
+    "lodash": "^4.15.0",
     "moment-timezone": "^0.5.5"
   },
   "devDependencies": {
