Add sermons for Q4 2016

--- a/config/upcoming.yml
+++ b/config/upcoming.yml
@@ -116,4 +116,46 @@
 - date: September 25
   passage: Luke 5:1-11
   title: Fishers of Men
+- date: October 2
+  passage: Titus 2:1-10
+  title: The Family of God
+- date: October 9
+  passage: Hosea 6:7-11:11
+  title: God's Love -- Compassionate & Personal
+- date: October 16
+  passage: Psalm 39
+  title: The Grave's Truth
+- date: October 23
+  passage: Philippians 4:10-20
+  title: Paul's Secret
+- date: October 30
+  passage: Psalm 63
+  title: The Soul's Desire
+- date: November 6
+  passage: Psalm 64
+  title: The Wicked's End
+- date: November 13
+  passage: Psalm 83
+  title: History's Lesson
+- date: November 20
+  passage: Psalm 146
+  title: The Ruler's Death
+- date: November 27
+  passage: Hosea 11:12-14:9
+  title: God's Love -- Saving & Healing
+- date: December 4
+  passage: Exodus 33:18
+  title: Show Me Your Glory
+- date: December 11
+  passage: Matthew 1:1-17
+  title: A Royal Family
+- date: December 18
+  passage: Matthew 1:18-25
+  title: A Royal Birth
+- date: December 25
+  passage: 1 Timothy 1:12-17
+  title: Christ Came ... to Save Sinners
+- date: January 1
+  passage: 1 John 3:1-10
+  title: Christ Came ... to Destroy the Works of the Devil
 
