--- a/config/config.yml
+++ b/config/config.yml
@@ -1,6 +1,7 @@
 --- #General config
 fromName: Upcoming Sermon
 fromEmail: sermons@domain.com
+dataBucket: sermon-data
 esvKey: IP
 timeZone: America/New_York
 
